--- a/Template.html
+++ b/Template.html
@@ -147,20 +147,21 @@ function init()
 	////////////
 	// CUSTOM //
 	////////////
-	const kRange = 3.0;
+	const kRange = 7.0;
 	const kDist = 20.0;
-	for(var i = -kRange ; i <= kRange ; i+=1.0) {
-		for(var j = -kRange ; j <= kRange ; j+=1.0) {
-			for(var k = -kRange ; k <= kRange ; k+= 1.0) {
-				var geometry = new THREE.SphereGeometry( 4, 4, 4 );
-				var material = new THREE.MeshLambertMaterial( { color: 0x0000ff } );
+	for( var i = 0 ; i < kRange ; i++ ) {
+		for( var j = 0 ; j < kRange ; j++ ) {
+			for( var k = 0 ; k <= kRange ; k++ ) {
+				var radius = histoData[i][j][k];
+				alert(radius);
+				var geometry = new THREE.SphereGeometry( radius, radius, radius );
+				var material = new THREE.MeshLambertMaterial( { color: 0x000088 } );
 				mesh = new THREE.Mesh( geometry, material );
-				mesh.position.set(0 + j * kDist, 40 + i * kDist, 0 + k * kDist);
+				mesh.position.set( (j - 3) * kDist, 40 + (i - 3) * kDist, 0 + (k - 3) * kDist);
 				scene.add(mesh);
 			}
 		}
 	}
-	
 }
 
 function animate() 
